WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
35926
Web Inspector: Hangup when expanding elements with enormous text node content in Elements panel
https://bugs.webkit.org/show_bug.cgi?id=35926
Summary
Web Inspector: Hangup when expanding elements with enormous text node content...
Alexander Pavlov (apavlov)
Reported
2010-03-09 09:38:24 PST
Steps to reproduce: 1. Visit
https://zlibdroidtest.appspot.com/
2. Bring up the Web Inspector 3. Try switching to the Elements panel A hangup occurs. Upstreaming
http://code.google.com/p/chromium/issues/detail?id=31832
Attachments
[PATCH] Suggested solution
(3.33 KB, patch)
2010-03-10 05:59 PST
,
Alexander Pavlov (apavlov)
pfeldman
: review-
Details
Formatted Diff
Diff
[PATCH] Bots fixed, explanation added
(2.50 KB, patch)
2010-03-10 07:30 PST
,
Alexander Pavlov (apavlov)
eric
: review-
Details
Formatted Diff
Diff
[PATCH] Rebaselined.
(2.25 KB, patch)
2010-06-11 07:02 PDT
,
Pavel Feldman
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Alexander Pavlov (apavlov)
Comment 1
2010-03-10 05:59:04 PST
Created
attachment 50395
[details]
[PATCH] Suggested solution
WebKit Review Bot
Comment 2
2010-03-10 06:02:00 PST
Attachment 50395
[details]
did not build on chromium: Build output:
http://webkit-commit-queue.appspot.com/results/530014
WebKit Review Bot
Comment 3
2010-03-10 06:02:55 PST
Attachment 50395
[details]
did not build on qt: Build output:
http://webkit-commit-queue.appspot.com/results/566018
Eric Seidel (no email)
Comment 4
2010-03-10 06:04:01 PST
Attachment 50395
[details]
did not build on mac: Build output:
http://webkit-commit-queue.appspot.com/results/578012
Pavel Feldman
Comment 5
2010-03-10 06:11:58 PST
Comment on
attachment 50395
[details]
[PATCH] Suggested solution You are optimizing for the corner-case. Do you think it improves average case as well? (r- for bots failures).
Alexander Pavlov (apavlov)
Comment 6
2010-03-10 07:30:11 PST
Created
attachment 50403
[details]
[PATCH] Bots fixed, explanation added
Alexander Pavlov (apavlov)
Comment 7
2010-03-10 07:38:47 PST
(In reply to
comment #5
)
> (From update of
attachment 50395
[details]
) > You are optimizing for the corner-case. Do you think it improves average case > as well?
At least, it does not regress an average case (since inRenderedText() is called for isText() renderers which usually have at least one InlineTextBox).
Eric Seidel (no email)
Comment 8
2010-03-15 15:30:46 PDT
Comment on
attachment 50403
[details]
[PATCH] Bots fixed, explanation added Looks good. However, you should also add a comment next to inRenderedText in Position.h explaining the runtime of the function, or at least warning that it's slow.
Pavel Feldman
Comment 9
2010-03-15 15:37:14 PDT
Eric, I think this could regress average case since we check potentially invisible nodes for being selectable. I would not be landing this - it optimizes for the inspector's corner case only.
Eric Seidel (no email)
Comment 10
2010-03-15 15:44:39 PDT
Comment on
attachment 50403
[details]
[PATCH] Bots fixed, explanation added Pavel is obviously attempting to r- through comment... Not sure why he didn't just r- it himself. ;)
Pavel Feldman
Comment 11
2010-03-15 15:52:42 PDT
(In reply to
comment #10
)
> (From update of
attachment 50403
[details]
) > Pavel is obviously attempting to r- through comment... Not sure why he didn't > just r- it himself. ;)
Thing is I am not sure. My gut tells me that optimizing for the corner case described in the bug must have trade-offs :). But we don't have real world metrics that would prove it either so or otherwise. So am just being cautious. If you think that doing an inexpensive extra check that might be unnecessary prior to doing necessary expensive check is fine in this context - I am all for it.
Alexander Pavlov (apavlov)
Comment 12
2010-03-23 10:03:54 PDT
***
Bug 35764
has been marked as a duplicate of this bug. ***
Pavel Feldman
Comment 13
2010-06-11 07:02:08 PDT
Created
attachment 58469
[details]
[PATCH] Rebaselined.
Pavel Feldman
Comment 14
2010-06-11 07:03:26 PDT
This now looks sane to me. Dave, could you please review this tiny change?
Eric Seidel (no email)
Comment 15
2010-06-11 08:18:25 PDT
Can't we make a test for this? I seem to remember Enrica recently made some Editor perf tests, or at least talked about doing so.
Dave Hyatt
Comment 16
2010-06-23 11:37:13 PDT
Comment on
attachment 58469
[details]
[PATCH] Rebaselined. Good change. r=me.
WebKit Commit Bot
Comment 17
2010-06-23 18:33:32 PDT
Comment on
attachment 58469
[details]
[PATCH] Rebaselined. Clearing flags on attachment: 58469 Committed
r61724
: <
http://trac.webkit.org/changeset/61724
>
WebKit Commit Bot
Comment 18
2010-06-23 18:33:38 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 19
2010-06-23 19:04:35 PDT
http://trac.webkit.org/changeset/61724
might have broken GTK Linux 64-bit Debug
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug